--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
     "react": "^18",
+    "react-collapse": "^5.1.1",
     "react-dom": "^18"
   },
   "devDependencies": {
