--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "react/no-unescaped-entities": "off",  // Disable the rule that prevents unescaped apostrophes
+    "react/display-name": "off"  // Disable the rule requiring display names for components
+  }
 }
